--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
         body {
             font-family: 'Open Sans', sans-serif;
-            background-color: #1c1c1c;
+            background-color: #ffffff;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             height: 100vh;
-            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         .container {
             text-align: center;
             width: 90%;
             max-width: 380px;
-            margin-top: -20px;
+            margin-top: 10%;
             position: relative;
         }
 
@@ -33,14 +33,14 @@
 
         h1 {
             font-size: 20px;
-            color: #ffffff;
+            color: #333333;
             margin-bottom: 10px;
             font-weight: 600;
         }
 
         p {
             font-size: 14px;
-            color: #999999;
+            color: #777777;
             margin-bottom: 20px;
         }
 
@@ -53,20 +53,20 @@
         .input-group label {
             display: block;
             font-size: 12px;
-            color: #999999;
+            color: #555555;
             margin-bottom: 5px;
         }
 
         select, input[type="tel"] {
             width: 100%;
             padding: 10px;
-            border: 1px solid #555;
+            border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 16px;
             box-sizing: border-box;
             margin-bottom: 10px;
-            background-color: #1c1c1c;
-            color: #ffffff;
+            background-color: #ffffff;
+            color: #333333;
         }
 
         select {
@@ -84,11 +84,11 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            border: 1px solid #555;
+            border: 1px solid #ccc;
             padding: 10px;
             border-radius: 5px;
-            background-color: #1c1c1c;
-            color: #ffffff;
+            background-color: #ffffff;
+            color: #333333;
             cursor: pointer;
             font-size: 16px;
             margin-bottom: 10px;
@@ -102,7 +102,7 @@
         .dropdown::after {
             content: '▼';
             font-size: 16px;
-            color: #ffffff;
+            color: #333333;
         }
 
         .dropdown-menu {
@@ -111,8 +111,8 @@
             top: 100%;
             left: 0;
             right: 0;
-            background-color: #333333;
-            border: 1px solid #555;
+            background-color: #ffffff;
+            border: 1px solid #ccc;
             border-radius: 5px;
             max-height: 300px;
             overflow-y: auto;
@@ -129,7 +129,7 @@
             align-items: center;
             justify-content: space-between;
             cursor: pointer;
-            color: #ffffff;
+            color: #333333;
         }
 
         .dropdown-item img {
@@ -138,13 +138,13 @@
         }
 
         .dropdown-item:hover {
-            background-color: #444444;
+            background-color: #f5f5f5;
         }
 
         .button {
             width: 100%;
             padding: 12px;
-            background-color: #6d5dfc;
+            background-color: #0088cc;
             color: #ffffff;
             border: none;
             border-radius: 5px;
@@ -155,7 +155,7 @@
         }
 
         .button:hover {
-            background-color: #5b4ddb;
+            background-color: #007ab8;
         }
 
         @media (max-width: 600px) {
@@ -175,7 +175,7 @@
         <div class="input-group dropdown-container">
             <label for="countryCode">Country</label>
             <div id="countryCode" class="dropdown" onclick="toggleDropdown()">
-                <img src="https://www.countryflags.io/au/flat/24.png" alt="Flag"> Australia (+61)
+                <img src="https://flagcdn.com/w20/au.png" alt="Flag"> Australia (+61)
             </div>
             <div id="dropdownMenu" class="dropdown-menu"></div>
         </div>
@@ -187,7 +187,7 @@
 
         <div>
             <input type="checkbox" id="keepSignedIn">
-            <label for="keepSignedIn" style="color: #ffffff;">Keep me signed in</label>
+            <label for="keepSignedIn" style="color: #333333;">Keep me signed in</label>
         </div>
 
         <button class="button" onclick="goToVerificationPage()">Next</button>
@@ -217,16 +217,16 @@
             const countryDropdown = document.getElementById('countryCode');
             const dropdownMenu = document.getElementById('dropdownMenu');
             const countries = [
-                { name: 'Australia', code: '+61', flag: 'https://www.countryflags.io/au/flat/24.png' },
-                { name: 'United States', code: '+1', flag: 'https://www.countryflags.io/us/flat/24.png' },
-                { name: 'United Kingdom', code: '+44', flag: 'https://www.countryflags.io/gb/flat/24.png' },
-                { name: 'Germany', code: '+49', flag: 'https://www.countryflags.io/de/flat/24.png' },
-                { name: 'France', code: '+33', flag: 'https://www.countryflags.io/fr/flat/24.png' },
-                { name: 'Japan', code: '+81', flag: 'https://www.countryflags.io/jp/flat/24.png' },
-                { name: 'India', code: '+91', flag: 'https://www.countryflags.io/in/flat/24.png' },
-                { name: 'China', code: '+86', flag: 'https://www.countryflags.io/cn/flat/24.png' },
-                { name: 'Russia', code: '+7', flag: 'https://www.countryflags.io/ru/flat/24.png' },
-                { name: 'South Korea', code: '+82', flag: 'https://www.countryflags.io/kr/flat/24.png' }
+                { name: 'Australia', code: '+61', flag: 'https://flagcdn.com/w20/au.png' },
+                { name: 'United States', code: '+1', flag: 'https://flagcdn.com/w20/us.png' },
+                { name: 'United Kingdom', code: '+44', flag: 'https://flagcdn.com/w20/gb.png' },
+                { name: 'Germany', code: '+49', flag: 'https://flagcdn.com/w20/de.png' },
+                { name: 'France', code: '+33', flag: 'https://flagcdn.com/w20/fr.png' },
+                { name: 'Japan', code: '+81', flag: 'https://flagcdn.com/w20/jp.png' },
+                { name: 'India', code: '+91', flag: 'https://flagcdn.com/w20/in.png' },
+                { name: 'China', code: '+86', flag: 'https://flagcdn.com/w20/cn.png' },
+                { name: 'Russia', code: '+7', flag: 'https://flagcdn.com/w20/ru.png' },
+                { name: 'South Korea', code: '+82', flag: 'https://flagcdn.com/w20/kr.png' }
                 // Add more countries as needed
             ];
 
